--- a/style.css
+++ b/style.css
@@ -14,10 +14,10 @@ canvas {
 
 @keyframes example {
     from {
-        box-shadow: 1px 1px 38px red;
+        box-shadow: 5px 1px 38px cyan;
     }
 
     to {
-        box-shadow: 1px 1px 38px yellow;
+        box-shadow: 5px 1px 38px gold;
     }
 }
